--- a/locales/zh-CN/market.json
+++ b/locales/zh-CN/market.json
@@ -5,13 +5,13 @@
       "desc1": "在会话窗口中通过右上角设置进入你想提交助手的设置页面;",
       "desc2": "点击右上角提交到助手市场按钮。",
       "tag": "方法一",
-      "title": "通过 LobeChat 提交"
+      "title": "通过 分享 提交"
     },
     "func2": {
-      "button": "前往 Github 助手仓库",
-      "desc": "如果您想将助手添加到索引中，请使用 agent-template.json 或 agent-template-full.json 在 plugins 目录中创建一个条目，编写简短的描述并适当标记，然后创建一个拉取请求。",
+      "button": "前往 反馈页面 提交",
+      "desc": "如果您想将助手添加到索引中，请在反馈页面留言以及简短的描述。",
       "tag": "方法二",
-      "title": "通过 Github 提交"
+      "title": "通过 反馈 提交"
     }
   },
   "search": {
@@ -22,7 +22,7 @@
     "prompt": "提示词",
     "title": "助手详情"
   },
-  "submitAgent": "提交助手",
+  "submitAgent": "更多",
   "title": {
     "allAgents": "全部助手",
     "recentSubmits": "最近新增"
