--- a/locales/zh-CN/migration.json
+++ b/locales/zh-CN/migration.json
@@ -10,7 +10,7 @@
     "clear": {
       "confirm": "即将清空本地数据（全局设置不受影响），请确认你已经下载了数据备份。"
     },
-    "description": "在新版本中，LobeChat 的数据存储有了巨大的飞跃。因此我们要对旧版数据进行升级，进而为你带来更好的使用体验。",
+    "description": "在新版本中，ChiehChat 的数据存储有了巨大的飞跃。因此我们要对旧版数据进行升级，进而为你带来更好的使用体验。",
     "features": {
       "capability": {
         "desc": "基于 IndexedDB 技术，足以装下你一生的会话消息",
@@ -36,7 +36,7 @@
         "title": "数据库升级成功"
       }
     },
-    "upgradeTip": "升级大致需要 10~20 秒，升级过程中请不要关闭 LobeChat"
+    "upgradeTip": "升级大致需要 10~20 秒，升级过程中请不要关闭 ChiehChat"
   },
   "migrateError": {
     "missVersion": "导入数据缺少版本号，请检查文件后重试",
