--- a/locales/zh-CN/chat.json
+++ b/locales/zh-CN/chat.json
@@ -12,8 +12,8 @@
   "historyRange": "历史范围",
   "inbox": {
     "defaultMessage": "你好，我是你的智能助手，你可以问我任何问题，我会尽力回答你。如果需要获得更加专业或定制的助手，可以点击`+`创建自定义助手",
-    "desc": "开启大脑集群，激发思维火花。你的智能助理，在这里与你交流一切",
-    "title": "随便聊聊"
+    "desc": "访问 https://chieh.pro 获取更多内容",
+    "title": "Chieh"
   },
   "input": {
     "onlyAdd": "仅添加消息",
