--- a/locales/zh-TW/market.json
+++ b/locales/zh-TW/market.json
@@ -5,13 +5,13 @@
       "desc1": "在會話視窗中通過右上角設置進入你想提交助手的設置頁面;",
       "desc2": "點擊右上角提交到助手市場按鈕。",
       "tag": "方法一",
-      "title": "通過 LobeChat 提交"
+      "title": "通過 分享 提交"
     },
     "func2": {
-      "button": "前往 Github 助手倉庫",
-      "desc": "如果您想將助手添加到索引中，請使用 agent-template.json 或 agent-template-full.json 在 plugins 目錄中創建一個條目，編寫簡短的描述並適當標記，然後創建一個拉取請求。",
+      "button": "前往 反饋頁面 ",
+      "desc": "如果您想將助手添加到索引中，請前往反饋頁面，編寫簡短的描述並適當標記。",
       "tag": "方法二",
-      "title": "通過 Github 提交"
+      "title": "通過 反饋 提交"
     }
   },
   "search": {
