--- a/locales/zh-TW/welcome.json
+++ b/locales/zh-TW/welcome.json
@@ -7,8 +7,8 @@
   "pickAgent": "或從以下助理範本中選擇",
   "skip": "跳過建立步驟",
   "slogan": {
-    "desc1": "釋放你腦力的潛能，點燃你的創意火花。你的智慧型助理，隨時待命。",
+    "desc1": "點擊下方 匯入設定 或立即開始 。",
     "desc2": "建立你的第一個助理，讓我們一起開始吧～",
-    "title": "為自己賦予一個更聰明的大腦"
+    "title": "解鎖無限可能"
   }
 }
